# IFSP-CMP-D3APL-2022.1

linear_classifier/: binary_linear_classifier_v1.ipynb  binary_linear_classifier_v2_base_code.ipynb  multiclass_classifier_wine.ipynb  pyproject.toml
