[build-system]
requires = [
    "poetry==1.1.13",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "har_flower"
version = "0.1.0"
description = "Keras Federated Learning Quickstart with Flower"
authors = ["The Flower Authors <enquiries@flower.dev>"]

[tool.poetry.dependencies]
python = ">=3.8.2,<3.10"
flwr = "^0.18.0"
numpy = "^1.22.3"
pandas = "^1.4"
scikit-learn = "^1.0.1"
# flwr = { path = "../../", develop = true }  # Development
tensorflow-cpu = "^2.6.2"
keras_tuner = "^1.1.2"
scikit-multilearn = "^0.2.0"
